--- a/main.html
+++ b/main.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
+	<main>
 	<div class=p1>
 		<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
 	</div>
-
+	</main>
 </body>
 
 </html>
