--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<main>
-	<div class=p1>
-		<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
+	<div class=box>
+		This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
 	</div>
 	</main>
 </body>
