--- a/main.html
+++ b/main.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-	<main>
-	<div class=box>
+	
+	<div class="box">
 		This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
 	</div>
-	</main>
+
 </body>
 
 </html>
