--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	
 	<div class="box">
-		This is a demo of box model, try to replicate this box model in Html & Css and try to  pass all the test cases.
+		This is a demo of box modelin HTML and CSS and try to pass  all the test  cases. Try to replicate this box model in HTML and Css and try to pass  all the test caes.
 	</div>
 
 </body>
